# air-traffic

./: CMakeLists.txt
Core/: CMakeLists.txt
Core/include/: CMakeLists.txt  Clock.hpp  Entity.hpp  EntityManager.hpp  EntityRegistration.hpp  GeometryEngine.hpp  Json.hpp  JsonParser.hpp  Message.hpp  MessageBus.hpp  MessageTypes.hpp  Vector3.hpp  Visuals.hpp
Core/include/Entity/: Entity.hpp  EntityManager.hpp  EntityRegistration.hpp
Core/include/Geometry/: GeometryEngine.hpp  Vector3.hpp
Core/include/Messaging/: MessageBus.hpp  MessageTypes.hpp
Core/include/Parsing/: Json.hpp  JsonParser.hpp
Core/include/Visuals/: Visuals.hpp
Core/src/: JsonParser.cpp  MessageBus.cpp
Execution/: CMakeLists.txt
Execution/src/: main.cpp
Plugins/: CMakeLists.txt
Plugins/ATC/: CMakeLists.txt
Plugins/ATC/include/: ATC.hpp
Plugins/ATC/src/: ATC.cpp
Plugins/Aircraft/: CMakeLists.txt
Plugins/Aircraft/include/: Aircraft.hpp
Plugins/Aircraft/src/: Aircraft.cpp
Plugins/Navigation/: CMakeLists.txt
Plugins/Navigation/include/: Destination.hpp  Route.hpp
Plugins/Navigation/src/: Destination.cpp
Tests/: CMakeLists.txt  itinerary_test.json  test.json
